# Logistic_Regression

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: on-push.yml
Src/: __init__.py  data_loader.py  model.py  preprocessing.py
confusion_matrix/: utils.py
data/: model_comparison_20260411_153908.csv
evaluation/: evaluator.py
feature_engg/: Feature_engineering.ipynb  preprocessing.py
grid_search/: evaluator.py
model_training/: trainer.py
plots/: Feature_engineering.ipynb
sklearn_train/: model.py  trainer.py
utils/: utils.py
